chore: automation round 2 for work-0175